# knowhere

./: .dockerignore  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DOC_PROFILER_LOGIC.md  Makefile  NOTICE  README.md  SECURITY.md  TASKS.md  agentic_rag_tests_a16c13cf.plan.md  align_agentic_rag_5455bfc8.plan.md  package.json  pnpm-lock.yaml  push_to_staging.sh  pyproject.toml  pytest.ini  run-api-local.sh  sync_staging.sh
apps/api/: .env.example  Dockerfile  Dockerfile.worker  alembic.ini  custom_openapi.py  env.example  main.py  openapi.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  test.csv  test2.csv  test_methods.py  test_stripe.py  worker.py
apps/api/__tests__/: conftest.py  test_exception_flow.py
apps/api/__tests__/smoke/: test_qstash_callbacks_api.py  test_webhook_creation.py  test_webhook_secrets_api.py
apps/api/__tests__/unit/: test_api_key_routes.py  test_api_key_service.py  test_auth_dependencies.py  test_graph_routing_routes.py  test_guest_registration_service.py  test_job_error_details.py  test_job_lifecycle_service.py  test_jobs_rate_limit_integration.py  test_jobs_retrieval_contract.py  test_local_dev_bootstrap_service.py  test_main_rate_limit_lifespan.py  test_mcp_query_tool.py  test_message_consumer.py  test_message_handlers_failure.py  test_message_status_update_handling.py  test_qstash_callbacks.py  test_retrieval_migration_layout.py  test_retrieval_routes.py  test_shared_state_machine_service.py  test_webhook_validator.py
apps/api/alembic/: env.py  verify_migration.sql
apps/api/alembic/versions/: 1b0ac51a2eb2_add_stripe_price_configs.py  20250101_simplify_to_prd_status.py  33eff537939b_baseline_20260305.py  63fda70265b6_increase_knowledge_base_type_field_.py  7afbeec4cd27_increase_knowledge_base_type_field_to_.py  8dfb2ce5f61d_remove_secret_from_webhook_events.py  8ffba9132ff0_add_partial_index_for_active_job_.py  9af5b5d6cd7e_update_stripe_price_configs_add_not_.py  a1b2c3d4e5f6_add_qstash_tracking_columns.py  a370fa1c27fc_increase_chunk_type_field_length_to_2000.py  a3f7c9d1e2b4_add_rate_limiter_tables.py  abc123def456_add_foreign_keys_with_dummy_user.py  add_state_machine_improvements.py  b2c3d4e5f6a7_add_guest_registration.py  c3d4e5f6a7b8_add_retrieval_phase1_baseline.py  c3d4e5f6a7b8_add_retrieval_service_v1.py  c4d5e6f7a8b9_adjust_guest_limits_and_system_limit_period.py  c7af0886d0a3_create_webhook_secrets_table.py  c88943aa1196_add_key_mask_to_api_keys.py  c9d8e7f6a5b4_add_oauth_providers_table.py  d1e2f3a4b5c6_add_webhook_events_table.py  d4e5f6a7b8c9_add_checkerboard_search_fields.py  d4e5f6a7b8c9_add_retrieval_graph_routing.py  def456ghi789_add_missing_webhook_secrets_indexes.py  e5f6a7b8c9d0_add_agentic_retrieval_tables.py  e5f6a7b8c9d0_add_retrieval_hit_stats.py  f16d6b72dcf8_initial_migration_with_knowledge_base_.py  f1a2b3c4d5e6_add_foreign_keys_to_new_user_table.py  f6a7b8c9d0e1_add_demo_materializations.py  f6a7b8c9d0e1_key_api_key_hashes.py  f7a8b9c0d1e2_add_agentic_workflow_trace_columns.py  f8a9b0c1d2e3_add_parse_agent_tables.py  ghi789jkl012_create_user_balances_table.py  jkl012mno345_add_stripe_customer_id_to_user_balances.py
apps/api/alembic/versions_archive_20260305/: 23607ad5e16a_add_payment_records.py  47671b90c04b_add_error_code_to_jobs.py  57f94fe88a51_add_per_page_billing_fields_to_jobs.py  6377dbf9a116_merge_payment_records_and_oauth_.py  7477484d4936_add_email_logs_table.py  a047370dc9a1_initial_migration.py  b2c3d4e5f6a8_migrate_credits_columns_to_bigint.py  b8c3d4e5f6a7_add_updated_at_to_users.py  e8b123456789_convert_status_to_string_50.py  f3a9c2e4d5b6_add_active_jobs_partial_index.py
apps/api/app/: __init__.py
apps/api/app/api/: api_router.py
apps/api/app/core/: __init__.py  celery_app.py  celery_router.py  context.py  database.py  dependencies.py  exception_handlers.py  image_cli.py  jwt.py  logging.py  permissions.py  security.py  users.py
apps/api/app/examples/: redis_optimization_example.py
apps/api/app/mcp/: __init__.py  retrieval_server.py
apps/api/app/middleware/: api_key_auth_middleware.py  credits_middleware.py  dual_auth_middleware.py  moesif_middleware.py
apps/api/app/models/: __init__.py
apps/api/app/repositories/: __init__.py  api_key_repository.py  base_repository.py  credits_repository.py  document_repository.py  guest_device_repository.py  job_repository.py  job_result_repository.py  knowledge_base_repository.py  oauth_repository.py  payment_record_repository.py  stripe_price_config_repository.py  subscription_repository.py  usage_log_repository.py  user_repository.py  webhook_repository.py
apps/api/app/services/: demo_document_service.py  demo_source_catalog.py  demo_source_materializer.py  demo_source_projection.py  document_ingestion_creation_service.py  document_ingestion_service.py  document_service.py  job_creation_service.py  job_document_scope_service.py  job_lifecycle_service.py  job_read_service.py  job_response_projection.py  job_upload_confirmation_service.py  messaging_service.py  qstash_callback_service.py  service_factory.py  (+1 more)
apps/api/deploy/: README.md  S3_EVENT_SETUP.md  docker-compose.dev.yml  start-dev.sh
apps/api/scripts/: add_credits.py  bootstrap_local_dev.py  ensure_test_environment.py  export_openapi.py  init_user.py  local_dev_bootstrap_service.py  log_manager.py  reset_alembic.py  validate_demo_documents.py
apps/api/tests/: README.md  __init__.py  conftest.py  demo_workflow.py  test_api_complete.py  test_api_key_auth.py  test_api_key_integration.py  test_api_key_simple.py  test_api_simple.py
apps/worker/: .env.example  Dockerfile  debug_bfs_refine.py  debug_toc_match.py  env.example  pyproject.toml  pyrightconfig.json  pytest.ini  reingest_kb.py  requirements.txt  test_import.py  worker.py
apps/worker/app/: __init__.py
apps/worker/tests/: conftest.py  test_layout_parser.py  test_mineru_upload_mode.py  test_pdf_parser_mineru_fallback.py
knowhere-mcp/: .env.example  README.md  local_search.py  pyproject.toml  rebuild_kb.py  server.py  skill.md  stats_tracker.py
(+1270 files in other folders)
