[project]
name = "knowhere-api"
version = "0.1.0"
description = "Knowhere API publication workspace"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/worker",
    "packages/shared-python",
]
