[project]
name = "knowhere-mcp"
version = "0.1.0"
description = "MCP Server for Knowhere API — Parse documents into structured, RAG-ready data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.28.0",
]

[project.scripts]
knowhere-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
