[project]
name = "knowhere-api-app"
version = "0.1.0"
description = "Knowhere API service"
requires-python = ">=3.11"
dependencies = [
    "knowhere-shared",
    "fastapi==0.135.1",
    "uvicorn==0.34.3",
    "starlette==0.52.1",
    "sqlalchemy==2.0.42",
    "alembic==1.13.1",
    "redis==5.3.1",
    "celery==5.4.0",
    "stripe==13.0.1",
    "pydantic==2.13.4",
    "PyJWT==2.12.0",
    "qstash==3.2.0",
    "httpx==0.28.1",
    "aiohttp==3.13.4",
    "loguru==0.7.3",
    "moesifapi==1.5.5",
    "limits>=5.8,<6",
    "logfire[celery,fastapi,httpx,sqlalchemy]>=4.25.0",
    "mcp>=1.27.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-alembic==0.12.1",
    "pytest-mock==3.15.1",
    "pytest-postgresql>=7.0.2",
    "fakeredis[lua]>=2.31.0",
    "pyright>=1.1.396",
]

[tool.uv.sources]
knowhere-shared = { workspace = true }

[tool.uv]
package = false
