[project]
name = "knowhere-worker-app"
version = "0.1.0"
description = "Knowhere Worker service"
requires-python = ">=3.11,<3.14"
dependencies = [
    "knowhere-shared",
    "numpy==2.2.6",
    "pandas==2.3.1",
    "jieba==0.42.1",
    "python-docx==1.2.0",
    "python-pptx==1.0.2",
    "pypdf==6.10.2",
    "beautifulsoup4==4.13.4",
    "lxml==6.1.0",
    "markitdown==0.1.2",
    "openpyxl==3.1.2",
    "pptx2md==2.0.6",
    "openai==1.93.3",
    "oss2>=2.18.0",
    "pillow==12.2.0",
    "cryptography==46.0.7",
    "tqdm==4.67.1",
    "logfire[celery,fastapi,httpx,sqlalchemy]>=4.25.0",
    "pymupdf==1.27.2",
    "pymupdf4llm==1.27.2.1",
    "gevent>=24.11.1",
    "psycogreen>=1.0.2",
    "httpcore>=1.0.6",
]

[dependency-groups]
dev = [
    "fakeredis[lua]>=2.31.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "pytest-postgresql>=7.0.2",
]

[tool.uv.sources]
knowhere-shared = { workspace = true }

[tool.uv]
package = false
